refactor: 사용자 식별자 예외 details 제거